feat: mf-6333 mf-6334 profile total value

--- a/packages/plugins/Handle/src/locales/en-US.json
+++ b/packages/plugins/Handle/src/locales/en-US.json
@@ -5,5 +5,6 @@
     "empty": "No search results found.",
     "wallets_address_copied": "Address successfully copied",
     "follow": "Follow",
-    "following": "Following"
+    "following": "Following",
+    "usd_value": "USD Value"
 }
