feat: mf-6333 mf-6334 profile total value (#11759)
* feat: mf-6333 mf-6334 profile total value

* feat: mf-6104 adjust profile card size

--- a/packages/plugins/Handle/src/locales/en-US.json
+++ b/packages/plugins/Handle/src/locales/en-US.json
@@ -4,5 +4,6 @@
     "reload": "Reload",
     "empty": "No search results found.",
     "follow": "Follow",
-    "following": "Following"
+    "following": "Following",
+    "usd_value": "USD Value"
 }
