--- a/packages/plugins/RSS3/src/locales/ja-JP.json
+++ b/packages/plugins/RSS3/src/locales/ja-JP.json
@@ -11,15 +11,15 @@
     "token_operation_verbose$burn": "$t(token_operation$burn)",
     "token_operation_verbose$deposit": "$t(token_operation$deposit)",
     "token_operation_verbose$withdraw": "$t(token_operation$withdraw)",
-    "token_staking$stake": "<bold>{{user}}</bold> ステーク <bold>{{symbol}}</bold>",
-    "token_staking$claim": "<bold>{{user}}</bold> が <bold>{{symbol}}</bold> を獲得",
-    "token_staking$unstake": "<bold>{{user}}</bold> 未ステーク <bold>{{symbol}}</bold>",
-    "token_approval$approve": "<bold>{{user}}</bold> が <bold>{{- amount}} {{symbol}}</bold> を <bold>{{contract}}</bold> に承認しました",
-    "token_approval$revoke": "<bold>{{user}}</bold> が <bold>{{- amount}} {{symbol}}</bold> <bold>{{contract}}</bold> の承認を取り消しました。",
-    "token_approval_verbose$approve": "<bold>{{user}}</bold> 承認済み <bold>{{- amount}} {{symbol}}</bold>",
-    "token_approval_verbose$revoke": "<bold>{{user}}</bold> が <bold>{{- amount}} {{symbol}}</bold> の承認を取り消しました。",
-    "collectible_approval$approve": "<bold>{{user}}</bold> 承認された {{collection}} to <bold>{{contract}}</bold>",
-    "collectible_approval$revoke": "<bold>{{user}}</bold> が {{collection}} から <bold>{{contract}}</bold> への承認を取り消しました",
+    "token_staking$stake": "<user>{{user}}</user> ステーク <bold>{{symbol}}</bold>",
+    "token_staking$claim": "<user>{{user}}</user> が <bold>{{symbol}}</bold> を獲得",
+    "token_staking$unstake": "<user>{{user}}</user> 未ステーク <bold>{{symbol}}</bold>",
+    "token_approval$approve": "<user>{{user}}</user> が <bold>{{- amount}} {{symbol}}</bold> を <bold>{{contract}}</bold> に承認しました",
+    "token_approval$revoke": "<user>{{user}}</user> が <bold>{{- amount}} {{symbol}}</bold> <bold>{{contract}}</bold> の承認を取り消しました。",
+    "token_approval_verbose$approve": "<user>{{user}}</user> 承認済み <bold>{{- amount}} {{symbol}}</bold>",
+    "token_approval_verbose$revoke": "<user>{{user}}</user> が <bold>{{- amount}} {{symbol}}</bold> の承認を取り消しました。",
+    "collectible_approval$approve": "<user>{{user}}</user> 承認された {{collection}} to <bold>{{contract}}</bold>",
+    "collectible_approval$revoke": "<user>{{user}}</user> が {{collection}} から <bold>{{contract}}</bold> への承認を取り消しました",
     "liquidity$supply": "<user>{{user}}</user> が <platform>{{platform}}</platform> に流動性を供給しました。",
     "liquidity$add": "<user>{{user}}</user> が <platform>{{platform}}</platform> に流動性を加えました",
     "liquidity$repay": "<user>{{user}}</user> は <platform>{{platform}}</platform> の流動性を返済します。",
@@ -43,12 +43,12 @@
     "collectible_burn": "<user>{{user}}</user> が<collectible>{{collectible}}</collectible> を燃やしました",
     "carry_out_activity": "<bold>{{user}}</bold> が <bold>{{target}}</bold> <bold>{{platform}}</bold> でアクティビティを行いました。",
     "donation_donate": "<bold>{{user}}</bold> が<bold>{{cost_value}} {{cost_symbol}}</bold>を寄付済み ました",
-    "donation_donate_verbose": "<bold>{{user}}</bold> が <bold>{{cost_value}} {{cost_symbol}}</bold> を <bold>{{project}}</bold> に寄付しました。",
-    "note$post": "<bold>{{user}}</bold> が <bold>{{platform}}</bold> にノートを投稿しました",
-    "note$mint": "<bold>{{user}}</bold> が <bold>{{platform}}</bold> にノートをミントしました",
-    "note$revise": "<bold>{{user}}</bold> が <bold>{{platform}}</bold> にノートを修正しました",
-    "note$comment": "<bold>{{user}}</bold> が <bold>{{platform}}</bold> にコメントしました",
-    "note$share": "<bold>{{user}}</bold> が <bold>{{platform}}</bold> にノートを共有しました",
+    "donation_donate_verbose": "<user>{{user}}</user> が <bold>{{cost_value}} {{cost_symbol}}</bold> を <bold>{{project}}</bold> に寄付しました。",
+    "note$post": "<user>{{user}}</user> が {{platform}} にノートを投稿しました",
+    "note$mint": "<user>{{user}}</user> が {{platform}} にノートをミントしました",
+    "note$revise": "<user>{{user}}</user> が {{platform}} にノートを修正しました",
+    "note$comment": "<user>{{user}}</user> が {{platform}} にコメントしました",
+    "note$share": "<user>{{user}}</user> が {{platform}} にノートを共有しました",
     "profile$create": "<user>{{user}}</user> が <platform>{{platform}}</platform> にプロフィールを作成しました",
     "profile$update": "<user>{{user}}</user> が <platform>{{platform}}</platform> のプロフィールを更新しました",
     "profile_link$follow": "<user>{{user}}</user> が <other>{{other}}</other> を <platform>{{platform}}</platform> をフォローしました。",
