--- a/packages/plugins/RSS3/src/locales/zh-CN.json
+++ b/packages/plugins/RSS3/src/locales/zh-CN.json
@@ -44,11 +44,11 @@
     "carry_out_activity": "<bold>{{user}}</bold> 在 <bold>{{target}}</bold> <bold>{{platform}}</bold> 进行了一项活动",
     "donation_donate": "<bold>{{user}}</bold> 捐赠了 <bold>{{cost_value}} {{cost_symbol}}</bold>",
     "donation_donate_verbose": "<bold>{{user}}</bold> 捐赠了 <bold>{{cost_value}} {{cost_symbol}}</bold>",
-    "note$post": "<bold>{{user}}</bold> 在 <bold>{{platform}}</bold> 发帖",
-    "note$mint": "<bold>{{user}}</bold> 在 <bold>{{platform}}</bold> 铸造了笔记",
-    "note$revise": "<bold>{{user}}</bold> 在 <bold>{{platform}}</bold> 上修改了备注",
-    "note$comment": "<bold>{{user}}</bold> 在 <bold>{{platform}}</bold> 上评论",
-    "note$share": "<bold>{{user}}</bold> 在 <bold>{{platform}}</bold> 转帖",
+    "note$post": "<user>{{user}}</user> 在 {{platform}} 发帖",
+    "note$mint": "<user>{{user}}</user> 在 {{platform}} 铸造了笔记",
+    "note$revise": "<user>{{user}}</user> 在 {{platform}} 上修改了备注",
+    "note$comment": "<user>{{user}}</user> 在 {{platform}} 上评论",
+    "note$share": "<user>{{user}}</user> 在 {{platform}} 转帖",
     "profile$create": "<user>{{user}}</user> 在 <platform>{{platform}}</platform> 上偿还流动资金",
     "profile$update": "<user>{{user}}</user> 在 <platform>{{platform}}</platform> 上更新了个人资料",
     "profile_link$follow": "<user>{{user}}</user> 在<platform>{{platform}}</platform>关注 <other>{{other}}</other>",
