fix: update translation

--- a/packages/plugins/RSS3/src/locales/en-US.json
+++ b/packages/plugins/RSS3/src/locales/en-US.json
@@ -41,11 +41,11 @@
     "carry_out_activity": "<bold>{{user}}</bold> carried out an activity to <bold>{{target}}</bold> on <bold>{{platform}}</bold>",
     "donation_donate": "<bold>{{user}}</bold> donated <bold>{{cost_value}} {{cost_symbol}}</bold>",
     "donation_donate_verbose": "<bold>{{user}}</bold> donated <bold>{{cost_value}} {{cost_symbol}}</bold> to <bold>{{project}}</bold>",
-    "note$post": "<user>{{user}}</user> posted a note on {{platform}}",
-    "note$mint": "<user>{{user}}</user> minted a note on {{platform}}",
-    "note$revise": "<user>{{user}}</user> revised a note on {{platform}}",
+    "note$post": "<user>{{user}}</user> publish a post on {{platform}}",
+    "note$mint": "<user>{{user}}</user> minted a post on {{platform}}",
+    "note$revise": "<user>{{user}}</user> revised a post on {{platform}}",
     "note$comment": "<user>{{user}}</user> made a comment on {{platform}}",
-    "note$share": "<user>{{user}}</user> shared a note on {{platform}}",
+    "note$share": "<user>{{user}}</user> shared a post on {{platform}}",
     "profile$create": "<user>{{user}}</user> created a profile on <platform>{{platform}}</platform>",
     "profile$update": "<user>{{user}}</user> updated a profile on <platform>{{platform}}</platform>",
     "profile_link$follow": "<user>{{user}}</user> followed <other>{{other}}</other> on <platform>{{platform}}</platform>",
