fix: collapse cards with more than 3 actions

--- a/packages/plugins/RSS3/src/locales/en-US.json
+++ b/packages/plugins/RSS3/src/locales/en-US.json
@@ -75,5 +75,6 @@
     "asset": "Asset",
     "successful": "Successful",
     "failed": "Failed",
-    "tx_fee": "Tx Fee"
+    "tx_fee": "Tx Fee",
+    "no_more_data": "No more data available."
 }
