--- a/packages/plugins/Handle/src/locales/en-US.json
+++ b/packages/plugins/Handle/src/locales/en-US.json
@@ -6,5 +6,6 @@
     "wallets_address_copied": "Address successfully copied",
     "follow": "Follow",
     "following": "Following",
-    "usd_value": "USD Value"
+    "usd_value": "USD Value",
+    "powered_by": "Powered by"
 }
