--- a/packages/plugins/Handle/src/locales/en-US.json
+++ b/packages/plugins/Handle/src/locales/en-US.json
@@ -5,5 +5,6 @@
     "empty": "No search results found.",
     "follow": "Follow",
     "following": "Following",
-    "usd_value": "USD Value"
+    "usd_value": "USD Value",
+    "powered_by": "Powered by"
 }
