--- a/packages/plugins/Trader/src/locale/ko-KR.json
+++ b/packages/plugins/Trader/src/locale/ko-KR.json
@@ -1,1 +1,65 @@
-{ "messages": {} }
+{
+    "messages": {
+        "IDd4f3": [
+            ["gasOptionType", "select", { "slow": "Slow", "normal": "Average", "fast": "Fast", "custom": "Custom" }]
+        ],
+        "r3OcML": [["mins"], "min"],
+        "RuO5md": [["seconds"], "sec"],
+        "s3+dHe": "<0>Powered by<1/></0><2>OKX</2>",
+        "BmN4Bk": "Aggregator",
+        "j2Uisd": "Approving",
+        "3uQmjD": "Average",
+        "z7Fh2l": ["Base fee required: ", ["MIN_BASE_FEE"], " Gwei"],
+        "aqop4L": "Check on Explorer",
+        "rulocO": "Checking Approve",
+        "bD8I7O": "Complete",
+        "7VpPHA": "Confirm",
+        "lQ6r7x": "Confirm swap",
+        "tbOs8j": "Confirm Swap",
+        "8Tg/JR": "Custom",
+        "HKH+W+": "Data",
+        "mYGY3B": "Date",
+        "ctb8Cs": ["Dex/Est received (", ["0"], ")"],
+        "kPQQEW": "Enter an Amount",
+        "Citz6F": "Exchange",
+        "7Bj3x9": "Failed",
+        "KziH2K": "Fast",
+        "ejVYRQ": "From",
+        "3kbpgO": "Gas Limit",
+        "OLY2Jk": "Gas Price",
+        "0caMy7": "History",
+        "m3pz1u": ["Insufficient ", ["symbol"], " Balance"],
+        "T3EPqL": "Max base fee",
+        "y62Dys": "Network fee",
+        "lO/vMB": "OKX DEX refers to the OKX DEX aggregator, which chooses the best route to place an order through all integrated third-party DEXs (some of them are shown below).  Note that OKX DEX derives all its liquidity from third-party liquidity pools. OKX DEX does NOT conduct any transactions directly.",
+        "g2UNkE": "Powered by",
+        "y/kxxM": "Priority fee",
+        "T3dlAs": "Quote expired. Update to receive a new quote.",
+        "F4Igxz": "Quote route",
+        "82+n6o": "Quote Route",
+        "fqDzSu": "Rate",
+        "Rx8sxX": "Select liquidity",
+        "LSwUJb": "Select Liquidity",
+        "9bG48P": "Sending",
+        "QsVbHo": "Sending address",
+        "CMHmbm": "Slippage",
+        "SYgxDf": "Slow",
+        "vH2C/2": "Swap",
+        "+q+Wa9": "Swap anyway",
+        "m64f3d": "Swaps between this token pair are’t supported at the moment. You can try with third-party DApps instead.",
+        "Q0IFtx": "The custom amount entered may be higher than the required network fee.",
+        "kPC0jM": "The swap is in progress. You can check its status in History after exiting this page.",
+        "bTQliy": "This fee is used to pay miners and isn't collected by us. The actual cost may be less than estimated, and the unused fee won't be deducted from your account.",
+        "Tl3Zls": "This is the price difference between the DEX with the highest composite price and other DEXs, which factors in the estimated received amount and network fee.",
+        "rqV4QH": "This swap isn’t supported",
+        "/jQctM": "To",
+        "iF9x7r": "Trading mode",
+        "0fljZe": "Trading Route",
+        "5HVoyc": "Transaction Details",
+        "GrTvoo": "Transaction in progress. Thank you for your patience.",
+        "g/i+bG": "Transaction rejected",
+        "Re7Oex": "Transaction submitted.",
+        "cFDjd3": "Transaction type",
+        "XcWehA": "Update Quote"
+    }
+}
