refactor: migrate plugin approve

--- a/packages/plugins/Approval/src/locale/en-US.json
+++ b/packages/plugins/Approval/src/locale/en-US.json
@@ -1,1 +1,13 @@
-{ "messages": {} }
+{
+    "messages": {
+        "yb/fjw": "Approval",
+        "YjX+AG": "Approved Amount",
+        "QowPFh": "Collectibles",
+        "kCAzy/": "Collection Approval",
+        "ks5OGD": "Contract",
+        "W5OcTk": "No approved contract records.",
+        "GXsAby": "Revoke",
+        "0/eoR6": "Revoking",
+        "6RDwJM": "Tokens"
+    }
+}
