--- a/packages/plugins/Approval/src/locale/ja-JP.json
+++ b/packages/plugins/Approval/src/locale/ja-JP.json
@@ -1,1 +1,13 @@
-{ "messages": {} }
+{
+    "messages": {
+        "yb/fjw": "承認",
+        "YjX+AG": "承認済み金額",
+        "QowPFh": "コレクティブ",
+        "kCAzy/": "コレクションを承認",
+        "ks5OGD": "コントラクト",
+        "W5OcTk": "承認された契約記録がありません。",
+        "GXsAby": "取り消し",
+        "0/eoR6": "取り消し",
+        "6RDwJM": "トークン"
+    }
+}
