--- a/packages/plugins/Approval/src/locale/ko-KR.json
+++ b/packages/plugins/Approval/src/locale/ko-KR.json
@@ -1,1 +1,13 @@
-{ "messages": {} }
+{
+    "messages": {
+        "yb/fjw": "승인",
+        "YjX+AG": "승인된 금액",
+        "QowPFh": "수집품",
+        "kCAzy/": "컬렉션 승인",
+        "ks5OGD": "컨트랙트",
+        "W5OcTk": "승인된 컨트렉트 기록이 없습니다.",
+        "GXsAby": "취소",
+        "0/eoR6": "취소 중",
+        "6RDwJM": "토큰"
+    }
+}
