--- a/packages/plugins/ArtBlocks/src/locale/ja-JP.json
+++ b/packages/plugins/ArtBlocks/src/locale/ja-JP.json
@@ -1,1 +1,36 @@
-{ "messages": {} }
+{
+    "messages": {
+        "gERRYE": "Artblocks",
+        "SDrb6I": "Artblocksでは、好きなスタイルを選び、作品に対価を支払うと、アルゴリズムによってランダムに生成されたバージョンのコンテンツが作成され、イーサリアムアカウントに送られる。",
+        "uqF4Nm": "ブロックチェーン:",
+        "xjhtsV": "チェーン",
+        "q+hNag": "コレクション",
+        "qqWcBV": "完了しました",
+        "p7l2aC": "コントラクト:",
+        "NCIYDF": "作成者",
+        "URmyfc": "詳細",
+        "SG6jy+": [
+            ["0"],
+            " ",
+            ["1"],
+            " ",
+            ["2"],
+            "のコレクションから美しいアート作品を購入しました。@realMaskNetworkをインストールすると、あなたも手に入ります。"
+        ],
+        "ie2c+s": [["0"], " ", ["1"], " ", ["2"], "のコレクションから、美しいアート作品を購入しました。ようこそ。"],
+        "623chP": "情報",
+        "znqB4T": "残高不足",
+        "bLvQvN": "ライブラリー:",
+        "z/3+av": "ライセンス:",
+        "ldI18s": "ミント済",
+        "URAE3q": "一時停止",
+        "D9iWaX": "ToS ドキュメントを確認してください",
+        "q/ao7A": "1ミントあたりの価格",
+        "rcNnsQ": "価格:",
+        "zZk9Yz": "購入",
+        "zgqgNP": "購入中...",
+        "ywDBfs": "問題が発生しました!",
+        "V9xq/9": "このプロジェクトはもう有効ではありません",
+        "On0aF2": "ウェブサイト"
+    }
+}
