--- a/packages/plugins/ArtBlocks/src/locale/ko-KR.po
+++ b/packages/plugins/ArtBlocks/src/locale/ko-KR.po
@@ -17,3 +17,105 @@ msgstr ""
 "X-Crowdin-Language: ko\n"
 "X-Crowdin-File: /[DimensionDev.Maskbook] develop/packages/plugins/ArtBlocks/src/locale/en-US.po\n"
 "X-Crowdin-File-ID: 948\n"
+
+#: src/SiteAdaptor/index.tsx:38
+msgid "Artblocks"
+msgstr "Artblocks"
+
+#: src/SiteAdaptor/index.tsx:43
+msgid "Artblocks allow you to pick a style that you like, pay for the work, and a randomly generated version of the content is created by an algorithm and sent to your Ethereum account."
+msgstr "Artblocks는 마음에 드는 스타일을 골라 작업비를 지불하고 무작위로 생성된 콘텐츠 버전이 알고리즘에 의해 생성돼 이더리움 계정으로 전송를 지원하는 겁니다."
+
+#: src/SiteAdaptor/DetailsView.tsx:129
+msgid "Blockchain:"
+msgstr "불록체인:"
+
+#: src/SiteAdaptor/DetailsView.tsx:124
+msgid "Chain"
+msgstr "체인"
+
+#: src/SiteAdaptor/Collectible.tsx:70
+msgid "Collection"
+msgstr "수집품"
+
+#: src/SiteAdaptor/ActionBar.tsx:30
+msgid "Completed"
+msgstr "완료됨"
+
+#: src/SiteAdaptor/DetailsView.tsx:135
+msgid "Contract:"
+msgstr "컨트랙트:"
+
+#: src/SiteAdaptor/DetailsView.tsx:70
+msgid "Created by"
+msgstr "제작자"
+
+#: src/SiteAdaptor/Collectible.tsx:71
+msgid "Details"
+msgstr "디테일"
+
+#: src/SiteAdaptor/PurchaseDialog.tsx:78
+msgid "I just purchased a beautiful piece of art from '{0}' collection for {1} {2}. Install @realMaskNetwork to get yours."
+msgstr "'{0}' 컬렉션에서 {1} {2} 가격로 아름다운 예술품을 구매했습니다. @realMaskNetwork 설치하여 NFT를 구매해 보세요."
+
+#: src/SiteAdaptor/PurchaseDialog.tsx:81
+msgid "I just purchased a beautiful piece of art from '{0}' collection for {1} {2}. Welcome to join."
+msgstr "'{0}' 컬렉션에서 {1} {2} 가격로 아름다운 예술품을 구매했습니다."
+
+#: src/SiteAdaptor/DetailsView.tsx:89
+msgid "Infos"
+msgstr "정보"
+
+#: src/SiteAdaptor/PurchaseDialog.tsx:112
+msgid "Insufficient balance"
+msgstr "잔액 부족"
+
+#: src/SiteAdaptor/DetailsView.tsx:116
+msgid "Library:"
+msgstr "라이브러리:"
+
+#: src/SiteAdaptor/DetailsView.tsx:109
+msgid "License:"
+msgstr "라이센스:"
+
+#: src/SiteAdaptor/DetailsView.tsx:102
+msgid "Minted:"
+msgstr "민팅 완료"
+
+#: src/SiteAdaptor/ActionBar.tsx:31
+msgid "Paused"
+msgstr "일시 정지"
+
+#: src/SiteAdaptor/PurchaseDialog.tsx:113
+msgid "Please check ToS document"
+msgstr "ToS 파일을 확인하세요"
+
+#: src/SiteAdaptor/PurchaseDialog.tsx:136
+msgid "Price per mint"
+msgstr "민팅 가격(1 NFT)"
+
+#: src/SiteAdaptor/DetailsView.tsx:93
+msgid "Price:"
+msgstr "가격:"
+
+#: src/SiteAdaptor/ActionBar.tsx:32
+#: src/SiteAdaptor/PurchaseDialog.tsx:126
+#: src/SiteAdaptor/PurchaseDialog.tsx:131
+msgid "Purchase"
+msgstr "구매"
+
+#: src/SiteAdaptor/PurchaseDialog.tsx:126
+msgid "Purchasing...."
+msgstr "구매 진행 중"
+
+#: src/SiteAdaptor/Collectible.tsx:65
+msgid "Something went wrong!"
+msgstr "오류가 발생합니다."
+
+#: src/SiteAdaptor/ActionBar.tsx:29
+msgid "This project is no more active"
+msgstr "활성화되지 않는 프로젝트입니다."
+
+#: src/SiteAdaptor/DetailsView.tsx:80
+msgid "Website"
+msgstr "웹사이트"
