--- a/packages/plugins/ArtBlocks/src/locale/ja-JP.po
+++ b/packages/plugins/ArtBlocks/src/locale/ja-JP.po
@@ -17,3 +17,105 @@ msgstr ""
 "X-Crowdin-Language: ja\n"
 "X-Crowdin-File: /[DimensionDev.Maskbook] develop/packages/plugins/ArtBlocks/src/locale/en-US.po\n"
 "X-Crowdin-File-ID: 948\n"
+
+#: src/SiteAdaptor/index.tsx:35
+msgid "Artblocks"
+msgstr "Artblocks"
+
+#: src/SiteAdaptor/index.tsx:30
+msgid "Artblocks allow you to pick a style that you like, pay for the work, and a randomly generated version of the content is created by an algorithm and sent to your Ethereum account."
+msgstr "Artblocksでは、好きなスタイルを選び、作品に対価を支払うと、アルゴリズムによってランダムに生成されたバージョンのコンテンツが作成され、イーサリアムアカウントに送られる。"
+
+#: src/SiteAdaptor/DetailsView.tsx:129
+msgid "Blockchain:"
+msgstr "ブロックチェーン:"
+
+#: src/SiteAdaptor/DetailsView.tsx:124
+msgid "Chain"
+msgstr "チェーン"
+
+#: src/SiteAdaptor/Collectible.tsx:70
+msgid "Collection"
+msgstr "コレクション"
+
+#: src/SiteAdaptor/ActionBar.tsx:30
+msgid "Completed"
+msgstr "完了しました"
+
+#: src/SiteAdaptor/DetailsView.tsx:135
+msgid "Contract:"
+msgstr "コントラクト:"
+
+#: src/SiteAdaptor/DetailsView.tsx:70
+msgid "Created by"
+msgstr "作成者"
+
+#: src/SiteAdaptor/Collectible.tsx:71
+msgid "Details"
+msgstr "詳細"
+
+#: src/SiteAdaptor/PurchaseDialog.tsx:78
+msgid "I just purchased a beautiful piece of art from '{0}' collection for {1} {2}. Install @realMaskNetwork to get yours."
+msgstr "{0} {1} {2}のコレクションから美しいアート作品を購入しました。@realMaskNetworkをインストールすると、あなたも手に入ります。"
+
+#: src/SiteAdaptor/PurchaseDialog.tsx:81
+msgid "I just purchased a beautiful piece of art from '{0}' collection for {1} {2}. Welcome to join."
+msgstr "{0} {1} {2}のコレクションから、美しいアート作品を購入しました。ようこそ。"
+
+#: src/SiteAdaptor/DetailsView.tsx:89
+msgid "Infos"
+msgstr "情報"
+
+#: src/SiteAdaptor/PurchaseDialog.tsx:112
+msgid "Insufficient balance"
+msgstr "残高不足"
+
+#: src/SiteAdaptor/DetailsView.tsx:116
+msgid "Library:"
+msgstr "ライブラリー:"
+
+#: src/SiteAdaptor/DetailsView.tsx:109
+msgid "License:"
+msgstr "ライセンス:"
+
+#: src/SiteAdaptor/DetailsView.tsx:102
+msgid "Minted:"
+msgstr "ミント済"
+
+#: src/SiteAdaptor/ActionBar.tsx:31
+msgid "Paused"
+msgstr "一時停止"
+
+#: src/SiteAdaptor/PurchaseDialog.tsx:113
+msgid "Please check ToS document"
+msgstr "ToS ドキュメントを確認してください"
+
+#: src/SiteAdaptor/PurchaseDialog.tsx:136
+msgid "Price per mint"
+msgstr "1ミントあたりの価格"
+
+#: src/SiteAdaptor/DetailsView.tsx:93
+msgid "Price:"
+msgstr "価格:"
+
+#: src/SiteAdaptor/ActionBar.tsx:32
+#: src/SiteAdaptor/PurchaseDialog.tsx:126
+#: src/SiteAdaptor/PurchaseDialog.tsx:131
+msgid "Purchase"
+msgstr "購入"
+
+#: src/SiteAdaptor/PurchaseDialog.tsx:126
+msgid "Purchasing...."
+msgstr "購入中..."
+
+#: src/SiteAdaptor/Collectible.tsx:65
+msgid "Something went wrong!"
+msgstr "問題が発生しました!"
+
+#: src/SiteAdaptor/ActionBar.tsx:29
+msgid "This project is no more active"
+msgstr "このプロジェクトはもう有効ではありません"
+
+#: src/SiteAdaptor/DetailsView.tsx:80
+msgid "Website"
+msgstr "ウェブサイト"
