--- a/packages/plugins/ArtBlocks/src/locale/zh-CN.po
+++ b/packages/plugins/ArtBlocks/src/locale/zh-CN.po
@@ -17,3 +17,105 @@ msgstr ""
 "X-Crowdin-Language: zh-CN\n"
 "X-Crowdin-File: /[DimensionDev.Maskbook] develop/packages/plugins/ArtBlocks/src/locale/en-US.po\n"
 "X-Crowdin-File-ID: 948\n"
+
+#: src/SiteAdaptor/index.tsx:35
+msgid "Artblocks"
+msgstr "Artblocks"
+
+#: src/SiteAdaptor/index.tsx:30
+msgid "Artblocks allow you to pick a style that you like, pay for the work, and a randomly generated version of the content is created by an algorithm and sent to your Ethereum account."
+msgstr "Artblocks 依托算法生成内容技术，给用户提供随心铸造 NFT 的体验。"
+
+#: src/SiteAdaptor/DetailsView.tsx:129
+msgid "Blockchain:"
+msgstr "区块链："
+
+#: src/SiteAdaptor/DetailsView.tsx:124
+msgid "Chain"
+msgstr "链"
+
+#: src/SiteAdaptor/Collectible.tsx:70
+msgid "Collection"
+msgstr "Nft 系列"
+
+#: src/SiteAdaptor/ActionBar.tsx:30
+msgid "Completed"
+msgstr "已完成"
+
+#: src/SiteAdaptor/DetailsView.tsx:135
+msgid "Contract:"
+msgstr "合约："
+
+#: src/SiteAdaptor/DetailsView.tsx:70
+msgid "Created by"
+msgstr "创建者"
+
+#: src/SiteAdaptor/Collectible.tsx:71
+msgid "Details"
+msgstr "详情"
+
+#: src/SiteAdaptor/PurchaseDialog.tsx:78
+msgid "I just purchased a beautiful piece of art from '{0}' collection for {1} {2}. Install @realMaskNetwork to get yours."
+msgstr "我刚刚从{0} 使用{1} {2} 购买了一件美丽的艺术品。安装@realMaskNetwork来获取您的作品。"
+
+#: src/SiteAdaptor/PurchaseDialog.tsx:81
+msgid "I just purchased a beautiful piece of art from '{0}' collection for {1} {2}. Welcome to join."
+msgstr "我刚刚在{0} 使用{1} {2} 购买了一件美丽的艺术品。欢迎加入！"
+
+#: src/SiteAdaptor/DetailsView.tsx:89
+msgid "Infos"
+msgstr "信息资料"
+
+#: src/SiteAdaptor/PurchaseDialog.tsx:112
+msgid "Insufficient balance"
+msgstr "余额不足"
+
+#: src/SiteAdaptor/DetailsView.tsx:116
+msgid "Library:"
+msgstr "照片库："
+
+#: src/SiteAdaptor/DetailsView.tsx:109
+msgid "License:"
+msgstr "许可证："
+
+#: src/SiteAdaptor/DetailsView.tsx:102
+msgid "Minted:"
+msgstr "已铸造："
+
+#: src/SiteAdaptor/ActionBar.tsx:31
+msgid "Paused"
+msgstr "已暂停"
+
+#: src/SiteAdaptor/PurchaseDialog.tsx:113
+msgid "Please check ToS document"
+msgstr "请检查 ToS 文档"
+
+#: src/SiteAdaptor/PurchaseDialog.tsx:136
+msgid "Price per mint"
+msgstr "每份铸造的价格"
+
+#: src/SiteAdaptor/DetailsView.tsx:93
+msgid "Price:"
+msgstr "价格："
+
+#: src/SiteAdaptor/ActionBar.tsx:32
+#: src/SiteAdaptor/PurchaseDialog.tsx:126
+#: src/SiteAdaptor/PurchaseDialog.tsx:131
+msgid "Purchase"
+msgstr "购买"
+
+#: src/SiteAdaptor/PurchaseDialog.tsx:126
+msgid "Purchasing...."
+msgstr "购买中..."
+
+#: src/SiteAdaptor/Collectible.tsx:65
+msgid "Something went wrong!"
+msgstr "发生未知错误。"
+
+#: src/SiteAdaptor/ActionBar.tsx:29
+msgid "This project is no more active"
+msgstr "此项目已不再生效"
+
+#: src/SiteAdaptor/DetailsView.tsx:80
+msgid "Website"
+msgstr "网站"
