--- a/packages/plugins/Avatar/src/locale/en-US.json
+++ b/packages/plugins/Avatar/src/locale/en-US.json
@@ -1,1 +1,24 @@
-{ "messages": {} }
+{
+    "messages": {
+        "9+VwX/": "Add Collectibles",
+        "dEgA5A": "Cancel",
+        "o+XJ9D": "Change",
+        "y2i17G": "Customize NFT experience by connecting social accounts. Enjoy Web2 with a whole new Web3 vibe.",
+        "6hw5vh": "Download image error",
+        "QJQd1J": "Edit Profile",
+        "Z3FXyt": "Loading...",
+        "jRcH7y": "NFT Avatar Setting",
+        "v01kR+": "NFT PFP",
+        "ZQbnxO": "No collectible found.",
+        "N2aeX8": "No valid wallet detected. Please connect wallet or verify wallet firstly.",
+        "FnjSI+": "Not current account. Please switch to this account to set up NFTs Profile.",
+        "6gRgw8": "Retry",
+        "tfDRzk": "Save",
+        "7PgtYC": "Set NFT Avatar",
+        "KVkke3": "Set NFT PFPs",
+        "xCcvjC": "Set up NFT PFP successfully",
+        "N6/RZd": "Sorry, failed to save NFT Avatar. Please set again.",
+        "kePpfU": "Update NFT Avatar Success!",
+        "sb9Y58": "Wallet"
+    }
+}
