--- a/packages/plugins/Avatar/src/locale/ja-JP.po
+++ b/packages/plugins/Avatar/src/locale/ja-JP.po
@@ -17,3 +17,84 @@ msgstr ""
 "X-Crowdin-Language: ja\n"
 "X-Crowdin-File: /[DimensionDev.Maskbook] develop/packages/plugins/Avatar/src/locale/en-US.po\n"
 "X-Crowdin-File-ID: 950\n"
+
+#: src/SiteAdaptor/NFTAvatar.tsx:229
+msgid "Add Collectibles"
+msgstr "コレクティブルを追加"
+
+#: src/Application/UploadAvatarDialog.tsx:148
+msgid "Cancel"
+msgstr "キャンセル"
+
+#: src/SiteAdaptor/NFTAvatar.tsx:179
+msgid "Change"
+msgstr "変更"
+
+#: src/Application/PersonaPage.tsx:75
+msgid "Customize NFT experience by connecting social accounts. Enjoy Web2 with a whole new Web3 vibe."
+msgstr "ソーシャルアカウントを接続することでNFTエクスペリエンスをカスタマイズします。全く新しいWeb3の雰囲気でWeb2をお楽しみください。"
+
+#: src/Application/NFTListDialog.tsx:120
+msgid "Download image error"
+msgstr "画像ダウンロードエラー"
+
+#: src/Application/RouterDialog.tsx:35
+msgid "Edit Profile"
+msgstr "プロフィールを編集する"
+
+#: src/SiteAdaptor/NFTBadge.tsx:42
+msgid "Loading..."
+msgstr "読み込み中..."
+
+#: src/SiteAdaptor/NFTAvatar.tsx:168
+msgid "NFT Avatar Setting"
+msgstr "NFT のアバター設定"
+
+#: src/Application/RouterDialog.tsx:35
+#: src/SiteAdaptor/NFTAvatarButton.tsx:46
+msgid "NFT PFP"
+msgstr "NFT PFP"
+
+#: src/SiteAdaptor/NFTAvatar.tsx:197
+msgid "No collectible found."
+msgstr "コレクションが見つかりません."
+
+#: src/Application/NFTListDialog.tsx:220
+msgid "No valid wallet detected. Please connect wallet or verify wallet firstly."
+msgstr "有効なウォレットが見つかりませんでした。ウォレットに接続するか、ウォレットを確認してください。"
+
+#: src/Application/PersonaItem.tsx:99
+msgid "Not current account. Please switch to this account to set up NFTs Profile."
+msgstr "現在のアカウントではありません。このアカウントに切り替えてNFTsプロファイルを設定してください。"
+
+#: src/SiteAdaptor/NFTAvatar.tsx:198
+msgid "Retry"
+msgstr "再試行"
+
+#: src/Application/UploadAvatarDialog.tsx:151
+msgid "Save"
+msgstr "保存"
+
+#: src/SiteAdaptor/NFTAvatar.tsx:233
+msgid "Set NFT Avatar"
+msgstr "NFT アバターを設定"
+
+#: src/Application/NFTInfo.tsx:31
+msgid "Set NFT PFPs"
+msgstr "NFT PFPを設定"
+
+#: src/Application/NFTInfo.tsx:28
+msgid "Set up NFT PFP successfully"
+msgstr "NFT PFPを正常にセットアップしました"
+
+#: src/Application/UploadAvatarDialog.tsx:91
+msgid "Sorry, failed to save NFT Avatar. Please set again."
+msgstr "申し訳ありませんが、NFT アバターを保存できませんでした。もう一度設定してください。"
+
+#: src/Application/UploadAvatarDialog.tsx:96
+msgid "Update NFT Avatar Success!"
+msgstr "NFTアバターを更新しました！"
+
+#: src/SiteAdaptor/NFTAvatar.tsx:172
+msgid "Wallet"
+msgstr "ウォレット"
