--- a/packages/plugins/Avatar/src/locale/ko-KR.po
+++ b/packages/plugins/Avatar/src/locale/ko-KR.po
@@ -17,3 +17,84 @@ msgstr ""
 "X-Crowdin-Language: ko\n"
 "X-Crowdin-File: /[DimensionDev.Maskbook] develop/packages/plugins/Avatar/src/locale/en-US.po\n"
 "X-Crowdin-File-ID: 950\n"
+
+#: src/SiteAdaptor/NFTAvatar.tsx:229
+msgid "Add Collectibles"
+msgstr "수장품 추가"
+
+#: src/Application/UploadAvatarDialog.tsx:148
+msgid "Cancel"
+msgstr "취소"
+
+#: src/SiteAdaptor/NFTAvatar.tsx:179
+msgid "Change"
+msgstr "변경"
+
+#: src/Application/PersonaPage.tsx:75
+msgid "Customize NFT experience by connecting social accounts. Enjoy Web2 with a whole new Web3 vibe."
+msgstr "소셜 계정을 연결하여 맞춤형 NFT를 경험합니다. 새로운 웹3 바이브로 웹2를 즐기세요."
+
+#: src/Application/NFTListDialog.tsx:120
+msgid "Download image error"
+msgstr "이미지 다운로드 오류"
+
+#: src/Application/RouterDialog.tsx:35
+msgid "Edit Profile"
+msgstr "프로필 편집"
+
+#: src/SiteAdaptor/NFTBadge.tsx:42
+msgid "Loading..."
+msgstr "로딩 중"
+
+#: src/SiteAdaptor/NFTAvatar.tsx:168
+msgid "NFT Avatar Setting"
+msgstr "NFT 아바타 설정"
+
+#: src/Application/RouterDialog.tsx:35
+#: src/SiteAdaptor/NFTAvatarButton.tsx:46
+msgid "NFT PFP"
+msgstr "NFT PFP"
+
+#: src/SiteAdaptor/NFTAvatar.tsx:197
+msgid "No collectible found."
+msgstr "수집품이 없습니다."
+
+#: src/Application/NFTListDialog.tsx:220
+msgid "No valid wallet detected. Please connect wallet or verify wallet firstly."
+msgstr "월렛이 검색되지 않았습니다. 먼저 월렛을 연결하거나 월렛을 확인하세요."
+
+#: src/Application/PersonaItem.tsx:99
+msgid "Not current account. Please switch to this account to set up NFTs Profile."
+msgstr "해당 계정으로 변경하고 NFT 프로필을 설정하세요."
+
+#: src/SiteAdaptor/NFTAvatar.tsx:198
+msgid "Retry"
+msgstr "다시 시도"
+
+#: src/Application/UploadAvatarDialog.tsx:151
+msgid "Save"
+msgstr "저장"
+
+#: src/SiteAdaptor/NFTAvatar.tsx:233
+msgid "Set NFT Avatar"
+msgstr "NFT 아바타 설정"
+
+#: src/Application/NFTInfo.tsx:31
+msgid "Set NFT PFPs"
+msgstr "NFT PFP 설정"
+
+#: src/Application/NFTInfo.tsx:28
+msgid "Set up NFT PFP successfully"
+msgstr "NFT PFP 설정 성공"
+
+#: src/Application/UploadAvatarDialog.tsx:91
+msgid "Sorry, failed to save NFT Avatar. Please set again."
+msgstr "NFT 아바타 저장 실패, 다시 시도"
+
+#: src/Application/UploadAvatarDialog.tsx:96
+msgid "Update NFT Avatar Success!"
+msgstr "NFT 아바타 업데이트 성공"
+
+#: src/SiteAdaptor/NFTAvatar.tsx:172
+msgid "Wallet"
+msgstr "월렛"
