--- a/packages/plugins/Avatar/src/locale/zh-CN.json
+++ b/packages/plugins/Avatar/src/locale/zh-CN.json
@@ -1,1 +1,24 @@
-{ "messages": {} }
+{
+    "messages": {
+        "9+VwX/": "添加 NFT",
+        "dEgA5A": "取消",
+        "o+XJ9D": "切换",
+        "y2i17G": "通过连接社交账户自定义NFT体验。享受具有 Web3 氛围的 Web2 。",
+        "6hw5vh": "下载图片错误",
+        "QJQd1J": "编辑个人资料",
+        "Z3FXyt": "加载中...",
+        "jRcH7y": "头像设置",
+        "v01kR+": "NFT 头像",
+        "ZQbnxO": "未找到任何 NFT。",
+        "N2aeX8": "未检测到有效的钱包。请先连接钱包或验证钱包。",
+        "FnjSI+": "非当前帐户。请切换到此帐户以设置 NFT 头像。",
+        "6gRgw8": "重试",
+        "tfDRzk": "保存",
+        "7PgtYC": "设置 NFT 头像",
+        "KVkke3": "设置 NFT 头像",
+        "xCcvjC": "NFT 头像设置成功",
+        "N6/RZd": "抱歉，保存 NFT 头像失败。请重新设置。",
+        "kePpfU": "更新 NFT 头像成功！",
+        "sb9Y58": "钱包"
+    }
+}
