--- a/packages/plugins/Calendar/src/locale/ja-JP.json
+++ b/packages/plugins/Calendar/src/locale/ja-JP.json
@@ -1,1 +1,15 @@
-{ "messages": {} }
+{
+    "messages": {
+        "AjVXBS": "カレンダー",
+        "mYGY3B": "日付",
+        "tst44n": "イベント",
+        "M1RnFv": "期限切れ",
+        "VZ2MmJ": "Twitter上で高度に統合されたWeb3ニュースやイベントは、トークン、NFT、AMA、規制イベントに関する情報を提供します。",
+        "qdyV/M": "ニュース",
+        "8Dh77Z": "NFTs",
+        "GHvzdC": "過去２週間のコンテンツはありません。",
+        "Qs7yI0": "以下により提供されています",
+        "a7u1N9": "価格",
+        "72c5Qo": "合計"
+    }
+}
