--- a/packages/plugins/Calendar/src/locale/ja-JP.po
+++ b/packages/plugins/Calendar/src/locale/ja-JP.po
@@ -17,3 +17,50 @@ msgstr ""
 "X-Crowdin-Language: ja\n"
 "X-Crowdin-File: /[DimensionDev.Maskbook] develop/packages/plugins/Calendar/src/locale/en-US.po\n"
 "X-Crowdin-File-ID: 952\n"
+
+#: src/SiteAdaptor/components/Footer.tsx:95
+#: src/SiteAdaptor/index.tsx:23
+msgid "Calendar"
+msgstr "カレンダー"
+
+#: src/SiteAdaptor/components/NFTList.tsx:216
+msgid "Date"
+msgstr "日付"
+
+#: src/SiteAdaptor/CalendarContent.tsx:85
+msgid "Events"
+msgstr "イベント"
+
+#: src/SiteAdaptor/components/CountDownTimer.tsx:58
+msgid "Expired"
+msgstr "期限切れ"
+
+#: src/SiteAdaptor/index.tsx:9
+msgid "Highly integrated Web3 news and events on Twitter, providing information on tokens, NFTs, AMAs, and regulatory events."
+msgstr "Twitter上で高度に統合されたWeb3ニュースやイベントは、トークン、NFT、AMA、規制イベントに関する情報を提供します。"
+
+#: src/SiteAdaptor/CalendarContent.tsx:84
+msgid "News"
+msgstr "ニュース"
+
+#: src/SiteAdaptor/CalendarContent.tsx:86
+msgid "NFTs"
+msgstr "NFTs"
+
+#: src/SiteAdaptor/components/EventList.tsx:163
+#: src/SiteAdaptor/components/NewsList.tsx:170
+#: src/SiteAdaptor/components/NFTList.tsx:229
+msgid "No content for the last two weeks."
+msgstr "過去２週間のコンテンツはありません。"
+
+#: src/SiteAdaptor/components/Footer.tsx:100
+msgid "Powered By"
+msgstr "以下により提供されています"
+
+#: src/SiteAdaptor/components/NFTList.tsx:208
+msgid "Price"
+msgstr "価格"
+
+#: src/SiteAdaptor/components/NFTList.tsx:200
+msgid "Total"
+msgstr "合計"
