--- a/packages/plugins/Calendar/src/locale/ko-KR.json
+++ b/packages/plugins/Calendar/src/locale/ko-KR.json
@@ -1,1 +1,15 @@
-{ "messages": {} }
+{
+    "messages": {
+        "AjVXBS": "캘린더",
+        "mYGY3B": "날짜",
+        "tst44n": "이벤트",
+        "M1RnFv": "만료됨",
+        "VZ2MmJ": "트위터에서 Web3 뉴스 및 이벤트, 또한 토큰, NFT, AMA 및 규제 정보를 제공합니다.",
+        "qdyV/M": "뉴스",
+        "8Dh77Z": "NFTs",
+        "GHvzdC": "지난 2주 동안 내용이 없습니다.",
+        "Qs7yI0": "제공자",
+        "a7u1N9": "가격",
+        "72c5Qo": "전체"
+    }
+}
