--- a/packages/plugins/Calendar/src/locale/ko-KR.po
+++ b/packages/plugins/Calendar/src/locale/ko-KR.po
@@ -17,3 +17,50 @@ msgstr ""
 "X-Crowdin-Language: ko\n"
 "X-Crowdin-File: /[DimensionDev.Maskbook] develop/packages/plugins/Calendar/src/locale/en-US.po\n"
 "X-Crowdin-File-ID: 952\n"
+
+#: src/SiteAdaptor/components/Footer.tsx:95
+#: src/SiteAdaptor/index.tsx:23
+msgid "Calendar"
+msgstr "캘린더"
+
+#: src/SiteAdaptor/components/NFTList.tsx:216
+msgid "Date"
+msgstr "날짜"
+
+#: src/SiteAdaptor/CalendarContent.tsx:85
+msgid "Events"
+msgstr "이벤트"
+
+#: src/SiteAdaptor/components/CountDownTimer.tsx:58
+msgid "Expired"
+msgstr "만료됨"
+
+#: src/SiteAdaptor/index.tsx:9
+msgid "Highly integrated Web3 news and events on Twitter, providing information on tokens, NFTs, AMAs, and regulatory events."
+msgstr "트위터에서 Web3 뉴스 및 이벤트, 또한 토큰, NFT, AMA 및 규제 정보를 제공합니다."
+
+#: src/SiteAdaptor/CalendarContent.tsx:84
+msgid "News"
+msgstr "뉴스"
+
+#: src/SiteAdaptor/CalendarContent.tsx:86
+msgid "NFTs"
+msgstr "NFTs"
+
+#: src/SiteAdaptor/components/EventList.tsx:163
+#: src/SiteAdaptor/components/NewsList.tsx:170
+#: src/SiteAdaptor/components/NFTList.tsx:229
+msgid "No content for the last two weeks."
+msgstr "지난 2주 동안 내용이 없습니다."
+
+#: src/SiteAdaptor/components/Footer.tsx:100
+msgid "Powered By"
+msgstr "제공자"
+
+#: src/SiteAdaptor/components/NFTList.tsx:208
+msgid "Price"
+msgstr "가격"
+
+#: src/SiteAdaptor/components/NFTList.tsx:200
+msgid "Total"
+msgstr "전체"
