--- a/packages/plugins/Calendar/src/locale/zh-TW.json
+++ b/packages/plugins/Calendar/src/locale/zh-TW.json
@@ -1,1 +1,15 @@
-{ "messages": {} }
+{
+    "messages": {
+        "AjVXBS": "日历",
+        "mYGY3B": "日期",
+        "tst44n": "活动",
+        "M1RnFv": "已过期",
+        "VZ2MmJ": "与Twitter 高度关联的 Web3 新闻和事件。提供 Token 、NFT、AMA 和管理活动。",
+        "qdyV/M": "新闻",
+        "8Dh77Z": "NFTs",
+        "GHvzdC": "最近两周没有内容。",
+        "Qs7yI0": "Powered By",
+        "a7u1N9": "价格",
+        "72c5Qo": "总额"
+    }
+}
