--- a/packages/plugins/Claim/src/locale/en-US.json
+++ b/packages/plugins/Claim/src/locale/en-US.json
@@ -1,1 +1,28 @@
-{ "messages": {} }
+{
+    "messages": {
+        "hom7qf": "Claim",
+        "u2Srv1": "Claim your Airdrop",
+        "TZDLPg": "Claimable",
+        "7lnlzl": ["Claimed ", ["amount"], " $", ["0"], " successfully."],
+        "ryWxhG": "Congratulations!",
+        "TYTRNP": "Eligible to claim",
+        "M1RnFv": "Expired",
+        "wrJC61": [
+            "I just claimed airdrop with ",
+            ["amount"],
+            " ",
+            ["0"],
+            " on Mask Network extension. Follow @realMaskNetwork to check if you are eligible to claim. \nInstall https://mask.io to explore more airdrop activities."
+        ],
+        "w4oOEJ": "Mask Community $ARB Giveaway",
+        "rJZPaP": "No activities found.",
+        "neBDpj": "Please connect wallet",
+        "GDe4XX": "Please connect wallet to check if you are eligible to claim $ARB.",
+        "Z8lGw6": "Share",
+        "hTbvD9": "Sorry, you are not eligible to claim $ARB in this campaign.",
+        "3cw8FQ": "To participate in airdrops, it is necessary to have enough native tokens in your wallet on the specified network to cover the transaction costs.",
+        "C3Wgzy": ["You have claimed ", ["0"], " $ARB."],
+        "ayf6mz": "You’re connected to a WalletConnect wallet. Please switch network in that wallet, or switch to another wallet.",
+        "gWcGl/": "Your wallet cancelled the transaction."
+    }
+}
