--- a/packages/plugins/Claim/src/locale/ko-KR.po
+++ b/packages/plugins/Claim/src/locale/ko-KR.po
@@ -17,3 +17,81 @@ msgstr ""
 "X-Crowdin-Language: ko\n"
 "X-Crowdin-File: /[DimensionDev.Maskbook] develop/packages/plugins/Claim/src/locale/en-US.po\n"
 "X-Crowdin-File-ID: 954\n"
+
+#: src/SiteAdaptor/components/AirDropActivities/AirDropActivityItem.tsx:233
+#: src/SiteAdaptor/components/ClaimDialog/index.tsx:24
+#: src/SiteAdaptor/components/ClaimEntry/index.tsx:26
+#: src/SiteAdaptor/components/ClaimSuccessDialog/index.tsx:92
+#: src/SiteAdaptor/index.tsx:57
+msgid "Claim"
+msgstr "수령"
+
+#: src/hooks/useClaimAirdrop.tsx:97
+msgid "Claim your Airdrop"
+msgstr "에어드랍 수령"
+
+#: src/SiteAdaptor/components/AirDropActivities/AirDropActivityItem.tsx:209
+msgid "Claimable"
+msgstr "수령 가능"
+
+#: src/SiteAdaptor/components/ClaimSuccessDialog/index.tsx:104
+msgid "Claimed {amount} ${0} successfully."
+msgstr ""
+
+#: src/SiteAdaptor/components/ClaimSuccessDialog/index.tsx:100
+msgid "Congratulations!"
+msgstr "축하합니다!"
+
+#: src/SiteAdaptor/components/AirDropActivities/AirDropActivityItem.tsx:208
+msgid "Eligible to claim"
+msgstr "수령 가능"
+
+#: src/SiteAdaptor/components/AirDropActivities/AirDropActivityItem.tsx:232
+msgid "Expired"
+msgstr "만료됨"
+
+#: src/SiteAdaptor/components/ClaimSuccessDialog/index.tsx:83
+msgid ""
+"I just claimed airdrop with {amount} {0} on Mask Network extension. Follow @realMaskNetwork to check if you are eligible to claim. \n"
+"Install https://mask.io to explore more airdrop activities."
+msgstr ""
+
+#: src/SiteAdaptor/components/AirDropActivities/AirDropActivityItem.tsx:180
+msgid "Mask Community $ARB Giveaway"
+msgstr ""
+
+#: src/SiteAdaptor/components/AirDropActivities/index.tsx:84
+msgid "No activities found."
+msgstr "사용 활동을 찾을 수 없습니다"
+
+#: src/SiteAdaptor/components/AirDropActivities/index.tsx:83
+msgid "Please connect wallet"
+msgstr "월렛을 연결하세요"
+
+#: src/SiteAdaptor/components/AirDropActivities/AirDropActivityItem.tsx:185
+msgid "Please connect wallet to check if you are eligible to claim $ARB."
+msgstr ""
+
+#: src/SiteAdaptor/components/ClaimSuccessDialog/index.tsx:112
+msgid "Share"
+msgstr "공유"
+
+#: src/SiteAdaptor/components/AirDropActivities/AirDropActivityItem.tsx:190
+msgid "Sorry, you are not eligible to claim $ARB in this campaign."
+msgstr "$ARB 수령하는 자격이 없습니다."
+
+#: src/SiteAdaptor/components/AirDropActivities/index.tsx:70
+msgid "To participate in airdrops, it is necessary to have enough native tokens in your wallet on the specified network to cover the transaction costs."
+msgstr "에어드롭에 참여하기 위해서는 거래 비용을 충당할 수 있는 네이티브 토큰이 지정된 네트워크의 월렛에 충분히 있어야 합니다."
+
+#: src/SiteAdaptor/components/AirDropActivities/AirDropActivityItem.tsx:195
+msgid "You have claimed {0} $ARB."
+msgstr ""
+
+#: src/SiteAdaptor/components/AirDropActivities/AirDropActivityItem.tsx:221
+msgid "You’re connected to a WalletConnect wallet. Please switch network in that wallet, or switch to another wallet."
+msgstr "WalletConnect 월렛에 연결되어 있습니다. 해당 월렛에서 네트워크를 전환하기나 다른 월렛으로 바꾸세요."
+
+#: src/hooks/useClaimAirdrop.tsx:102
+msgid "Your wallet cancelled the transaction."
+msgstr "월렛은 이미 해당 거래를 취소했습니다."
