--- a/packages/plugins/Claim/src/locale/zh-TW.json
+++ b/packages/plugins/Claim/src/locale/zh-TW.json
@@ -1,1 +1,28 @@
-{ "messages": {} }
+{
+    "messages": {
+        "hom7qf": "领取",
+        "u2Srv1": "确认领取空投",
+        "TZDLPg": "可领取",
+        "7lnlzl": ["Claimed ", ["amount"], " $", ["0"], " successfully."],
+        "ryWxhG": "恭喜！",
+        "TYTRNP": "有资格领取",
+        "M1RnFv": "已过期",
+        "wrJC61": [
+            "I just claimed airdrop with ",
+            ["amount"],
+            " ",
+            ["0"],
+            " on Mask Network extension. Follow @realMaskNetwork to check if you are eligible to claim. \nInstall https://mask.io to explore more airdrop activities."
+        ],
+        "w4oOEJ": "Mask Community $ARB Giveaway",
+        "rJZPaP": "未找到活动",
+        "neBDpj": "请连接钱包",
+        "GDe4XX": "Please connect wallet to check if you are eligible to claim $ARB.",
+        "Z8lGw6": "分享",
+        "hTbvD9": "对不起，您没有资格在此活动中领取 $ARB。",
+        "3cw8FQ": "要参与空投，您的钱包必须有足够的原生代币来支付交易成本。",
+        "C3Wgzy": ["You have claimed ", ["0"], " $ARB."],
+        "ayf6mz": "您已连接到一个钱包。请在那个钱包中切换网络，或切换到另一个钱包。",
+        "gWcGl/": "你的钱包已取消交易。"
+    }
+}
