fix: run codegen

--- a/packages/plugins/Collectible/src/locale/en-US.json
+++ b/packages/plugins/Collectible/src/locale/en-US.json
@@ -24,6 +24,7 @@
         "FzzpXs": ["Sale ends in ", ["0"]],
         "XsyYEe": "This NFT didn't have any activities.",
         "0+3dvg": "This NFT didn't have any offers.",
+        "s4Omor": ["To <0>", ["0"], "</0>"],
         "8glx+u": "Token ID",
         "6IvSyW": "Token Standard"
     }
