--- a/packages/plugins/Collectible/src/locale/ja-JP.json
+++ b/packages/plugins/Collectible/src/locale/ja-JP.json
@@ -24,6 +24,7 @@
         "FzzpXs": ["セールは ", ["0"]],
         "XsyYEe": "このNFTにはアクティビティがありませんでした。",
         "0+3dvg": "このNFTにはオファーはありませんでした。",
+        "s4Omor": ["To <0>", ["0"], "</0>"],
         "8glx+u": "トークンID",
         "6IvSyW": "トークン標準"
     }
