--- a/packages/plugins/Collectible/src/locale/ko-KR.json
+++ b/packages/plugins/Collectible/src/locale/ko-KR.json
@@ -24,6 +24,7 @@
         "FzzpXs": ["세일 종료 시간: ", ["0"]],
         "XsyYEe": "해당 NFT에 대한 오버가 없습니다.",
         "0+3dvg": "해당 NFT에 대한 오버가 없습니다.",
+        "s4Omor": ["To <0>", ["0"], "</0>"],
         "8glx+u": "토큰 ID",
         "6IvSyW": "토큰 표준"
     }
