--- a/packages/plugins/Collectible/src/locale/zh-CN.json
+++ b/packages/plugins/Collectible/src/locale/zh-CN.json
@@ -24,6 +24,7 @@
         "FzzpXs": ["出售结束于 ", ["0"]],
         "XsyYEe": "此 NFT 没有任何交易动态。",
         "0+3dvg": "此 NFT 没有任何报价。",
+        "s4Omor": ["To <0>", ["0"], "</0>"],
         "8glx+u": "Token ID",
         "6IvSyW": "代币标准"
     }
