--- a/packages/plugins/FileService/src/locale/ja-JP.json
+++ b/packages/plugins/FileService/src/locale/ja-JP.json
@@ -1,1 +1,28 @@
-{ "messages": {} }
+{
+    "messages": {
+        "bnuQy5": [["0"], " ファイル選択中"],
+        "e1vdXO": "Arweave",
+        "RLBjfU": ["Attached File: ", ["name"], " (", ["size"], ")"],
+        "dEgA5A": "キャンセル",
+        "7VpPHA": "確認",
+        "Udf/Es": "永久に分散化されたファイルストレージ。Arweave Networkの上にあるMaskの友達にファイルをアップロードして共有します。",
+        "cnGeoo": "削除",
+        "/KseE7": "ファイルを削除",
+        "mzI/c+": "ダウンロード",
+        "Rm3JCH": "ファイル名は3文字以上20文字以内で入力してください。",
+        "tG9G+b": "ファイルサービス",
+        "XrH+JC": "IPFS",
+        "tuOw4x": "暗号化しましょう",
+        "AxPAXW": "結果は見つかりませんでした。",
+        "VHShJf": "アップロードするファイルを選択するには、「ファイルを参照」ボタンをクリックしてください。",
+        "2wxgft": "名前変更",
+        "qNiGUh": "サイズ",
+        "IQ3gAw": "ファイルをアップロード",
+        "re2nOO": "アップロードされたファイル",
+        "6hagY3": "Mesonを使用して加速する",
+        "7PPwVf": "ユーザーはこれらのファイルのローカルリンクのみを削除することができます。分散ストレージプロトコル上のファイルは削除できません。",
+        "Gia1VG": "プラグイン: ファイルサービス",
+        "4JCJIV": "Web3ファイルサービスとは何ですか?",
+        "9uYu7e": "まだファイルはアップロードされていません。"
+    }
+}
