--- a/packages/plugins/FileService/src/locale/ko-KR.json
+++ b/packages/plugins/FileService/src/locale/ko-KR.json
@@ -1,1 +1,28 @@
-{ "messages": {} }
+{
+    "messages": {
+        "bnuQy5": [["0"], " 파일 선택됨"],
+        "e1vdXO": "Arweave",
+        "RLBjfU": ["Attached File: ", ["name"], " (", ["size"], ")"],
+        "dEgA5A": "취소",
+        "7VpPHA": "확인",
+        "Udf/Es": "탈중앙화 영구적 파일 저장. Arweave Network를 통해 파일을 업로드하고 Mask 친구에게 공유합니다.",
+        "cnGeoo": "삭제",
+        "/KseE7": "파일 삭제",
+        "mzI/c+": "다운로드",
+        "Rm3JCH": "파일 이름은 3~20 글자 이내로 입력해주세요.",
+        "tG9G+b": "파일 서비스",
+        "XrH+JC": "IPFS",
+        "tuOw4x": "암호화하기",
+        "AxPAXW": "검색 결과가 없습니다.",
+        "VHShJf": "파일 브러우저 버튼을 클릭하여 업로드할 파일을 선택하세요.",
+        "2wxgft": "이름 변경",
+        "qNiGUh": "size",
+        "IQ3gAw": "파일 업로드",
+        "re2nOO": "파일 업로드",
+        "6hagY3": "Meson CDN를 이용하기",
+        "7PPwVf": "사용자는 이러한 파일의 로컬 링크만 삭제할 수 있습니다. 탈중앙화 스토리지 프로토콜의 파일은 삭제할 수 없습니다.",
+        "Gia1VG": "웹3 파일 서비스",
+        "4JCJIV": "웹2 파일 서비스가 무엇입니까?",
+        "9uYu7e": "업로드된 파일이 없습니다."
+    }
+}
