--- a/packages/plugins/FriendTech/src/locale/ja-JP.json
+++ b/packages/plugins/FriendTech/src/locale/ja-JP.json
@@ -1,1 +1,25 @@
-{ "messages": {} }
+{
+    "messages": {
+        "bwRvnp": "動作",
+        "hehnjM": "量",
+        "HpgswQ": "ウォレットに接続して、キーが保持されているかを確認します。",
+        "U/6KKh": "x.comのタイムラインにユーザーのフレンドキーに関する情報を表示します。",
+        "NBRdPB": "友達",
+        "ejVYRQ": "から",
+        "9FSKeo": "ガス料金",
+        "0caMy7": "履歴",
+        "CI4Km7": "ホルダー",
+        "FYzHRF": "保持中",
+        "vS/FMN": "キー価格",
+        "WQg61I": "キー",
+        "xNB0TS": "売却",
+        "E5pRo/": "キーを販売",
+        "7xTCzK": "次のシェアの価格は、S^2 / 16000*1 のエーテルに等しい。ここで、Sは現在のキー数です。",
+        "/jQctM": "宛先：",
+        "NrYZ3H": "合計金額",
+        "ZFtwlj": "トレード",
+        "wMHvYH": "価値",
+        "BbPO8N": "所持",
+        "uiFNIR": "あなたのランク"
+    }
+}
