--- a/packages/plugins/FriendTech/src/locale/ja-JP.po
+++ b/packages/plugins/FriendTech/src/locale/ja-JP.po
@@ -17,3 +17,94 @@ msgstr ""
 "X-Crowdin-Language: ja\n"
 "X-Crowdin-File: /[DimensionDev.Maskbook] develop/packages/plugins/FriendTech/src/locale/en-US.po\n"
 "X-Crowdin-File-ID: 966\n"
+
+#: src/SiteAdaptor/Order.tsx:209
+msgid "Action"
+msgstr "動作"
+
+#: src/SiteAdaptor/Order.tsx:182
+msgid "Amount"
+msgstr "量"
+
+#: src/SiteAdaptor/Main.tsx:17
+msgid "Connecting to the wallet to see what keys are held."
+msgstr "ウォレットに接続して、キーが保持されているかを確認します。"
+
+#: src/SiteAdaptor/index.tsx:22
+msgid "Display the user's friend key related information on the timeline on x.com."
+msgstr "x.comのタイムラインにユーザーのフレンドキーに関する情報を表示します。"
+
+#: src/SiteAdaptor/components/RouterDialog.tsx:28
+#: src/SiteAdaptor/components/RouterDialog.tsx:31
+#: src/SiteAdaptor/index.tsx:16
+msgid "Friend"
+msgstr "友達"
+
+#: src/SiteAdaptor/Order.tsx:193
+msgid "From"
+msgstr "から"
+
+#: src/SiteAdaptor/Order.tsx:223
+msgid "Gas fee"
+msgstr "ガス料金"
+
+#: src/SiteAdaptor/components/RouterDialog.tsx:45
+msgid "History"
+msgstr "履歴"
+
+#: src/SiteAdaptor/components/UserProfile.tsx:198
+msgid "Holders"
+msgstr "ホルダー"
+
+#: src/SiteAdaptor/components/UserProfile.tsx:214
+#: src/SiteAdaptor/UserDetail.tsx:100
+msgid "Holding"
+msgstr "保持中"
+
+#: src/SiteAdaptor/components/UserProfile.tsx:161
+msgid "Key Price"
+msgstr "キー価格"
+
+#: src/SiteAdaptor/components/HoldingCard.tsx:138
+#: src/SiteAdaptor/components/HoldingCard.tsx:178
+#: src/SiteAdaptor/components/RouterDialog.tsx:44
+msgid "Keys"
+msgstr "キー"
+
+#: src/SiteAdaptor/components/RouterDialog.tsx:30
+msgid "Sell"
+msgstr "売却"
+
+#: src/SiteAdaptor/Order.tsx:212
+msgid "Sell Key"
+msgstr "キーを販売"
+
+#: src/SiteAdaptor/components/UserProfile.tsx:165
+#: src/SiteAdaptor/Order.tsx:147
+msgid "The price of next share is equal to the S^2 / 16000*1 ether where S is the current number of keys."
+msgstr "次のシェアの価格は、S^2 / 16000*1 のエーテルに等しい。ここで、Sは現在のキー数です。"
+
+#: src/SiteAdaptor/Order.tsx:201
+msgid "To"
+msgstr "宛先："
+
+#: src/SiteAdaptor/Order.tsx:217
+msgid "Total Amount"
+msgstr "合計金額"
+
+#: src/SiteAdaptor/UserDetail.tsx:92
+msgid "Trades"
+msgstr "トレード"
+
+#: src/SiteAdaptor/components/HoldingCard.tsx:144
+#: src/SiteAdaptor/components/HoldingCard.tsx:184
+msgid "Value"
+msgstr "価値"
+
+#: src/SiteAdaptor/components/UserProfile.tsx:182
+msgid "You Own"
+msgstr "所持"
+
+#: src/SiteAdaptor/components/UserProfile.tsx:206
+msgid "Your Rank"
+msgstr "あなたのランク"
