--- a/packages/plugins/FriendTech/src/locale/ko-KR.po
+++ b/packages/plugins/FriendTech/src/locale/ko-KR.po
@@ -17,3 +17,94 @@ msgstr ""
 "X-Crowdin-Language: ko\n"
 "X-Crowdin-File: /[DimensionDev.Maskbook] develop/packages/plugins/FriendTech/src/locale/en-US.po\n"
 "X-Crowdin-File-ID: 966\n"
+
+#: src/SiteAdaptor/Order.tsx:209
+msgid "Action"
+msgstr "행동"
+
+#: src/SiteAdaptor/Order.tsx:182
+msgid "Amount"
+msgstr "수량"
+
+#: src/SiteAdaptor/Main.tsx:17
+msgid "Connecting to the wallet to see what keys are held."
+msgstr "월렛을 연결하여 보유하고 있는 키를 확인합니다."
+
+#: src/SiteAdaptor/index.tsx:22
+msgid "Display the user's friend key related information on the timeline on x.com."
+msgstr "X.com 의 타임라인에 사용자의 친구 키 관련 정보를 표시합니다."
+
+#: src/SiteAdaptor/components/RouterDialog.tsx:28
+#: src/SiteAdaptor/components/RouterDialog.tsx:31
+#: src/SiteAdaptor/index.tsx:16
+msgid "Friend"
+msgstr "친구"
+
+#: src/SiteAdaptor/Order.tsx:193
+msgid "From"
+msgstr "From"
+
+#: src/SiteAdaptor/Order.tsx:223
+msgid "Gas fee"
+msgstr "가스비"
+
+#: src/SiteAdaptor/components/RouterDialog.tsx:45
+msgid "History"
+msgstr "역사 기록"
+
+#: src/SiteAdaptor/components/UserProfile.tsx:198
+msgid "Holders"
+msgstr "홀더"
+
+#: src/SiteAdaptor/components/UserProfile.tsx:214
+#: src/SiteAdaptor/UserDetail.tsx:100
+msgid "Holding"
+msgstr "보유중"
+
+#: src/SiteAdaptor/components/UserProfile.tsx:161
+msgid "Key Price"
+msgstr "가격 설정"
+
+#: src/SiteAdaptor/components/HoldingCard.tsx:138
+#: src/SiteAdaptor/components/HoldingCard.tsx:178
+#: src/SiteAdaptor/components/RouterDialog.tsx:44
+msgid "Keys"
+msgstr "키"
+
+#: src/SiteAdaptor/components/RouterDialog.tsx:30
+msgid "Sell"
+msgstr "매출"
+
+#: src/SiteAdaptor/Order.tsx:212
+msgid "Sell Key"
+msgstr "키 매출"
+
+#: src/SiteAdaptor/components/UserProfile.tsx:165
+#: src/SiteAdaptor/Order.tsx:147
+msgid "The price of next share is equal to the S^2 / 16000*1 ether where S is the current number of keys."
+msgstr "다음 지분의 가격은 S^2 / 16000*1 ETH와 같으며, 여기서 S는 현재 키의 개수입니다."
+
+#: src/SiteAdaptor/Order.tsx:201
+msgid "To"
+msgstr "To"
+
+#: src/SiteAdaptor/Order.tsx:217
+msgid "Total Amount"
+msgstr "총액"
+
+#: src/SiteAdaptor/UserDetail.tsx:92
+msgid "Trades"
+msgstr "거래"
+
+#: src/SiteAdaptor/components/HoldingCard.tsx:144
+#: src/SiteAdaptor/components/HoldingCard.tsx:184
+msgid "Value"
+msgstr "값"
+
+#: src/SiteAdaptor/components/UserProfile.tsx:182
+msgid "You Own"
+msgstr "You Own"
+
+#: src/SiteAdaptor/components/UserProfile.tsx:206
+msgid "Your Rank"
+msgstr "나의 순위"
